--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Fontes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+    <!--CSS-->
+    <link rel="stylesheet" href="style.css">
     <title>Disclone</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="content">
+                <h2>IMAGINE UM LUGAR...</h2>
+                <p>...onde você possa pertencer a um clube escolar, um grupo de gamers, ou uma comunidade artística
+                    mundial. Onde você e alguns amigos possam passar um tempo juntos. Um lugar que torna fácil conversar
+                    todos os dias e socializar com mais frequência.</p>
+            </div>
+            <div class="buttons">
+                <a href="" class="light">Baixar para Windows</a>
+                <a href="" class="dark">Abra o Disclone no seu navegador</a>
+            </div>
+        </div>
+    </header>
+    <section class="one">
+        <div class="container">
+            <div class="content-single">
+                <img  src="assets/section-img01.png" alt="">
+                <div class="text">
+                    <h3>Crie um espaço controlado por convite onde você se sinta em casa</h3>
+                    <p>Os servidores Discord são organizados em canais com assuntos para vocês colaborarem,
+                        compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
+                </div>
+            </div>
+            <div class="content-single">
+
+                <div class="text">
+                    <h3>Aqui é fácil se encontrar</h3>
+                    <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar
+                        imediatamente, sem nem ter que fazer a chamada.
+                    </p>
+                </div>
+                <img src="assets/section-img02.png" alt="">
+            </div>
+            <div class="content-single">
+                <img src="assets/section-img03.png" alt="">
+                <div class="text">
+                    <h3>Para poucos e para muitos</h3>
+                    <p>Organize qualquer comunidade com ferramentas de moderação e acesso personalizado a membros. Dê
+                        poderes especiais aos membros, monte canais privados e muito mais.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="two">
+        <div class="container">
+            <div class="content">
+                <h3>TECNOLOGIA DE CONEXÃO CONFIÁVEL</h3>
+                <p>Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.</p>
+                <img src="assets/section-img04.png" alt="">
+            </div>
+        </div>
+    </section>
+    <footer>
+        <img src="assets/logo-discord.png" alt="">
+        <p>Disclone</p>
+    </footer>
 </body>
+
 </html>
